Prymitywny model poruszania sie

--- a/en_szkielet_03_win.vcxproj
+++ b/en_szkielet_03_win.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="shaderprogram.cpp" />
     <ClCompile Include="sphere.cpp" />
     <ClCompile Include="teapot.cpp" />
+    <ClCompile Include="textures.cpp" />
     <ClCompile Include="torus.cpp" />
   </ItemGroup>
   <ItemGroup>
