--- a/en_szkielet_03_win.vcxproj.filters
+++ b/en_szkielet_03_win.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="torus.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="textures.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="f_constant.glsl">
